Fix layout problem in mobile media -1

--- a/src/assets/styles/layout/_section-projects.scss
+++ b/src/assets/styles/layout/_section-projects.scss
@@ -12,7 +12,7 @@
   }
   @include respond(mobile) {
     grid-row: 5 / 6;
-    min-width: 34.5rem;
+    max-width: 34.5rem;
     padding-top: 1.5rem;
     margin-bottom: 8rem;
   }
